[gd_scene load_steps=11 format=2]

[ext_resource path="res://wolf_editing_tools/art/e.webp" type="Texture" id=1]
[ext_resource path="res://wolf_editing_tools/art/n.webp" type="Texture" id=2]
[ext_resource path="res://wolf_editing_tools/scenes_and_scripts/map/tile.gd" type="Script" id=3]
[ext_resource path="res://wolf_editing_tools/art/s.webp" type="Texture" id=4]
[ext_resource path="res://wolf_editing_tools/art/w.webp" type="Texture" id=5]

[sub_resource type="QuadMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 5 )

[node name="Tile" type="Spatial"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
explict_tag/enabled = false
explict_tag/number = 0

[node name="EastFace" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1, 0.5, 0.5 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="NorthFace" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.5, 0.5, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

[node name="SouthFace" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0.5, 0.5, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 7 )

[node name="WestFace" type="MeshInstance" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 0.5, 0.5 )
mesh = SubResource( 4 )
material/0 = SubResource( 8 )

[node name="OverheadFace" type="MeshInstance" parent="."]
transform = Transform( 1, -1.31134e-07, 4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1.31134e-07, -1, -4.37114e-08, 0.5, 1, 0.5 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="BottomFace" type="MeshInstance" parent="."]
transform = Transform( 1, -1.31134e-07, 4.37114e-08, 4.37114e-08, 1.19209e-07, -1, 1.31134e-07, 1, 1.19209e-07, 0.5, 0, 0.5 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )
